# corepp

./: .gitignore  CMakeLists.txt  README.md
include/: cat.hpp  cmd.hpp  corepp.hpp  mkdir.hpp  multicall.hpp
include/cat/: cat.hpp
include/mkdir/: mkdir.hpp
src/: cat.cpp  cmd.cpp  mkdir.cpp  multicall.cpp
src/cat/: CMakeLists.txt  cat.cpp
src/cmd/: cmd.cpp
src/mkdir/: CMakeLists.txt  mkdir.cpp
